--- a/Project_Template.vcxproj.filters
+++ b/Project_Template.vcxproj.filters
@@ -25,7 +25,7 @@
     <Filter Include="helper\stb">
       <UniqueIdentifier>{2eeab77b-5d84-4893-b9df-1b2ed789b189}</UniqueIdentifier>
     </Filter>
-    <Filter Include="GLFW">
+    <Filter Include="helper\GLFW">
       <UniqueIdentifier>{a0602d5e-e972-4f4c-8cf5-7553eb5febae}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -79,7 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Library Include="dependancies\lib\glfw3.lib">
-      <Filter>GLFW</Filter>
+      <Filter>helper\GLFW</Filter>
     </Library>
   </ItemGroup>
 </Project>
