--- a/Project_Template.vcxproj
+++ b/Project_Template.vcxproj
@@ -78,8 +78,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Dependencies\include;$(MSBuildProjectDirectory)\dependancies\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Dependencies\lib;$(MSBuildProjectDirectory)\dependancies\lib;$(MSBuildProjectDirectory)\dependancies\include;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Dependencies\include;$(MSBuildProjectDirectory)\dependancies\include;$(ProjectDir)\packages\glm.0.9.9.800\build\native\include;$(ProjectDir)\packages\glfw.3.3.8\build\native\include\GLFW;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Dependencies\lib;$(MSBuildProjectDirectory)\dependancies\lib;$(MSBuildProjectDirectory)\dependancies\include;$(ProjectDir)\packages\glfw.3.3.8\build\native\lib\static\v143\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -152,6 +152,7 @@
     <ClCompile Include="scenebasic_uniform.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
     <None Include="shader\basic_uniform.frag" />
     <None Include="shader\basic_uniform.vert" />
   </ItemGroup>
@@ -164,10 +165,16 @@
     <ClInclude Include="helper\stb\stb_image_write.h" />
     <ClInclude Include="scenebasic_uniform.h" />
   </ItemGroup>
-  <ItemGroup>
-    <Library Include="dependancies\lib\glfw3.lib" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="packages\glfw.3.3.8\build\native\glfw.targets" Condition="Exists('packages\glfw.3.3.8\build\native\glfw.targets')" />
+    <Import Project="packages\glm.0.9.9.800\build\native\glm.targets" Condition="Exists('packages\glm.0.9.9.800\build\native\glm.targets')" />
   </ImportGroup>
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('packages\glfw.3.3.8\build\native\glfw.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\glfw.3.3.8\build\native\glfw.targets'))" />
+    <Error Condition="!Exists('packages\glm.0.9.9.800\build\native\glm.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\glm.0.9.9.800\build\native\glm.targets'))" />
+  </Target>
 </Project>
