Process Key Inputs

--- a/Project_Template.vcxproj
+++ b/Project_Template.vcxproj
@@ -147,6 +147,7 @@
   <ItemGroup>
     <ClCompile Include="Asset.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="helper\scene.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="helper\glslprogram.cpp" />
