--- a/Project_Template.vcxproj.filters
+++ b/Project_Template.vcxproj.filters
@@ -58,6 +58,9 @@
     <ClCompile Include="TextureLoad.cpp">
       <Filter>Src\Helper</Filter>
     </ClCompile>
+    <ClCompile Include="Light.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="shader\basic_uniform.frag">
@@ -101,6 +104,12 @@
     </ClInclude>
     <ClInclude Include="TextureLoad.h">
       <Filter>Src\Helper</Filter>
+    </ClInclude>
+    <ClInclude Include="Light.h">
+      <Filter>Src\Assets</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneObjects.h">
+      <Filter>Src\Assets</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
