Add Toon Shading

--- a/Project_Template.vcxproj
+++ b/Project_Template.vcxproj
@@ -166,10 +166,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="shader\blinnphong\phong.frag" />
-    <None Include="shader\blinnphong\phong.vert" />
+    <None Include="shader\phong\blinn.vert" />
     <None Include="shader\phong\phong.frag" />
     <None Include="shader\phong\phong.vert" />
+    <None Include="shader\toon.frag" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Asset.h" />
