Start of multiple lights

--- a/Project_Template.vcxproj
+++ b/Project_Template.vcxproj
@@ -167,6 +167,7 @@
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="shader\phong\blinn.vert" />
+    <None Include="shader\phong\blinnMulti.vert" />
     <None Include="shader\phong\phong.frag" />
     <None Include="shader\phong\phong.vert" />
     <None Include="shader\toon.frag" />
