--- a/Project_Template.vcxproj
+++ b/Project_Template.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="Dump.cpp" />
     <ClCompile Include="helper\scene.cpp" />
     <ClCompile Include="Light.cpp" />
+    <ClCompile Include="Material.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="helper\glslprogram.cpp" />
@@ -183,6 +184,8 @@
     <ClInclude Include="helper\stb\stb_image.h" />
     <ClInclude Include="helper\stb\stb_image_write.h" />
     <ClInclude Include="Light.h" />
+    <ClInclude Include="Material.h" />
+    <ClInclude Include="Mesh.h" />
     <ClInclude Include="scenebasic_uniform.h" />
     <ClInclude Include="SceneObjects.h" />
     <ClInclude Include="TextureLoad.h" />
