--- a/Project_Template.vcxproj.filters
+++ b/Project_Template.vcxproj.filters
@@ -29,6 +29,9 @@
     <Filter Include="Src\Scene\Assets">
       <UniqueIdentifier>{7797ba22-d83d-4a49-af04-abb6cf54c210}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Shaders\advanced">
+      <UniqueIdentifier>{cdd10b9d-c22e-4096-98b7-22d72f1a9ab5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -96,6 +99,9 @@
     </None>
     <None Include="shader\configurable\configurable.vert">
       <Filter>Shaders\configurable</Filter>
+    </None>
+    <None Include="shader\advanced\edge.frag">
+      <Filter>Shaders\advanced</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
